# farbrain

./: .env.example  .gitignore  API_SPEC.md  ARCHITECTURE.md  CLAUDE.md  CLOUDFLARE_TUNNEL_SETUP.md  DEPLOY_RENDER.md  RBAC_DESIGN.md  README.md  RENDER_SETUP.md  SETUP.md  TROUBLESHOOTING.md  pyproject.toml  render.yaml  setup-secrets.ps1  start-dev.bat  start-farbrain-prod.ps1  start-farbrain.bat  start-farbrain.ps1  start-local.ps1  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  stop-farbrain.ps1  test_idea_submission.py  test_llm_format.py  test_pdf_generation.py  test_report_generation.py  test_report_output.md
.claude/: settings.local.json
backend/: .env.example  API_CALL_GRAPH.md  DEBUG_API.md  __init__.py  add_closest_idea_id_column.py  check_embeddings.py  check_ideas.py  create_demo_session.py  create_test_session.py  init_db.py  migrate_remove_duration.py  pyrightconfig.json  requirements.txt  reset_database.py  test_embedding_consistency.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  debug.py  dialogue.py  ideas.py  reports.py  sessions.py  users.py  visualization.py  votes.py  websocket.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  base.py  cluster.py  idea.py  report.py  session.py  user.py  vote.py
backend/app/schemas/: __init__.py  idea.py  session.py  user.py  visualization.py
backend/app/services/: __init__.py  clustering.py  embedding.py  llm.py  pdf_generator.py  report_generator.py  scoring.py  starter_ideas.py
backend/app/utils/: cluster_labeling.py  clustering_operations.py
backend/app/websocket/: __init__.py  manager.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_idea_workflow.py  test_session_flow.py  test_websocket.py
backend/tests/unit/: test_api_auth.py  test_api_ideas.py  test_api_sessions.py  test_api_users.py  test_api_visualization.py  test_clustering.py  test_config.py  test_embedding.py  test_llm.py  test_scoring.py
frontend/: .env.production  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: IdeaInput.tsx  Scoreboard.tsx  VisualizationCanvas.tsx
frontend/src/hooks/: useAdminActions.ts  useCoordinateTransform.ts  useSessionData.ts  useWebSocket.ts
test_scripts/: README.md  test_dialogue_mode.py  test_force_cluster.py  test_openai_api.py  test_starter_ideas.py  test_valid_models.py
(+17 files in other folders)
